--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,18 +1,50 @@
+.CustomCont {
+    max-width: 10000px;
+}
+.title-about-us {
+    color: var(--title-color);
+    font-family: "Poppins", sans-serif;
+    font-size: 0.8rem;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    text-align: left;
+  }
+
+.intro-about-us {
+    color: var(--subtitle-color);
+    font-size: 2.27rem;
+    line-height: normal;
+    font-family: "Signika", sans-serif;
+    margin-top: 20px;
+    text-align: left;
+  }
+
+  .description-about-us, .service-item {
+    color: var(--text-color);
+    font-size: 1.1rem;
+    font-family: "Poppins", sans-serif;
+    margin-top: 25px;
+    line-height: normal;
+    text-align: left;
+  }
 .staff-image{
-    max-width: 570px;
+    min-width: auto;
     height: auto;
+    margin-right:auto;
+}
+
+.services-list {
+    list-style-type: none;
+    margin-bottom: 10px;
 }
 .dog_print{
     max-width: 20px;
 }
-.service-item img.dog_print {
-    display: inline;
-    vertical-align: middle;
-    margin-right: 10px;
-}
 .pricing_button{
-    background-color: var(--bn-select-color);
-  border: 1px solid var(--bn-select-color);
+  text-decoration: none;
+  background-color: var(--bn-select-color);
   border-radius: 5px;
   font-size: 0.72rem;
   font-family: "Poppins", sans-serif;
@@ -27,4 +59,11 @@
   height: 2.8rem;
   display: inline-block;
 }
+.pricing_button:hover {
+    text-decoration: none;
+    background-color:#5e9ac8;
+    transition: 0.7s;
+    color: var(--button-text-color);
+}
+  
 /*# sourceMappingURL=about-us.css.map */
