--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -132,3 +132,12 @@
 .carousel_read more {font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;}
+    
+ .h4 {color:#212736;
+    font-family: "Signika", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-variation-settings:
+      "GRAD" 0;  
+    }
