--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -129,15 +129,26 @@
 .service-carousel__round {border-radius: 75px;
 }
 
-.carousel_read more {font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;}
-    
- .h4 {color:#212736;
-    font-family: "Signika", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    font-variation-settings:
-      "GRAD" 0;  
-    }
+
+ .h4 class_carouse. {color:#212736;
+    font-family Signika, sans-serif
+font-feature-settings normal
+font-kerning auto
+font-optical-sizing auto
+font-size 22px
+font-stretch 100%
+font-style normal
+font-variant-alternates normal
+font-variant-caps normal
+font-variant-east-asian normal
+font-variant-ligatures normal
+font-variant-numeric normal
+font-variant-position normal
+font-variation-settings normal
+font-weight 600
+letter-spacing normal
+line-height 28.6px
+text-align center
+text-transform none
+vertical-align baseline}
+
