the mistake correction

--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -131,24 +131,24 @@
 
 
  .h4 class_carousel {color:#212736;
-    font-family: Signika, sans-serif
-font-feature-settings: normal
-font-kerning: auto
-font-optical-sizing: auto
-font-size: 22px
-font-stretch: 100%
-font-style: normal
-font-variant-alternates: normal
-font-variant-caps: normal
-font-variant-east-asian: normal
-font-variant-ligatures: normal
-font-variant-numeric: normal
-font-variant-position: normal
-font-variation-settings: normal
-font-weight: 600
-letter-spacing: normal
-line-height: 28.6px
-text-align: center
-text-transform: none
-vertical-align: baseline}
+    font-family: Signika, sans-serif;
+font-feature-settings: normal;
+font-kerning: auto;
+font-optical-sizing: auto;
+font-size: 22px;
+font-stretch: 100%;
+font-style: normal;
+font-variant-alternates: normal;
+font-variant-caps: normal;
+font-variant-east-asian: normal;
+font-variant-ligatures: normal;
+font-variant-numeric: normal;
+font-variant-position: normal;
+font-variation-settings: normal;
+font-weight: 600;
+letter-spacing: normal;
+line-height: 28.6px;
+text-align: center;
+text-transform: none;
+vertical-align: baseline;}
 
