font-style changing

--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -133,13 +133,14 @@
 h4 {
     font-family: 'Signika Light', sans-serif; /* Replace 'sans-serif' with a secondary font if needed */
     color: #212736;
-    font-weight: 400;
-    font-style:italic;
+    font-weight: 700;
+    font-style:normal;
+    border-bottom-color: #212736 (33, 39, 54);
 }
 
 p {
     font-family: 'Poppins-Bold', 'Poppins', sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     font-style: normal;
     color: #647a81;
     border-bottom-color: #647a81 (35, 85, 101);
