font style chaging

--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -134,7 +134,7 @@ h4 {
     font-family: 'Signika Light', sans-serif; /* Replace 'sans-serif' with a secondary font if needed */
     color: #212736;
     font-weight: 700;
-    font-style:normal;
+    font-style:bold;
     border-bottom-color: #212736 (33, 39, 54);
 }
 
