font-family changing

--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -131,7 +131,7 @@
 
 
 h4 {
-    font-family: 'Signika Light', sans-serif; /* Replace 'sans-serif' with a secondary font if needed */
+    font-family: 'Signika', sans-serif; /* Replace 'sans-serif' with a secondary font if needed */
     color: #212736;
     font-weight: 600;
     font-style:bold;
