--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -137,6 +137,7 @@ h4 {
     font-style:semi-bold;
     border-bottom-color: #212736 (33, 39, 54);
     font-stretch: 100%;
+    text-align: center;
 }
 
 p {
@@ -145,6 +146,7 @@ p {
     font-style: normal;
     color: #647a81;
     border-bottom-color: #647a81 (35, 85, 101);
+    text-align: center;
 
 }
 
@@ -152,4 +154,6 @@ p1 {font-family: 'Poppins-Bold', 'Poppins', sans-serif;
     font-weight: 400;
     font-style: normal;
     color: #647a81;
-    border-bottom-color: #647a81 (35, 85, 101);}
+    border-bottom-color: #647a81 (35, 85, 101);
+    text-align: center;
+}
