styling mobile first pricing content and plan

--- a/css/pricing.css
+++ b/css/pricing.css
@@ -10,13 +10,16 @@
 .pricing__content {
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin: 0 15px;
+  max-width: 300px;
+  padding: 0 15px 0;
 }
 
 /* Pricing Info */
 .pricing__info {
-  text-align: center;
+  text-align: left;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .pricing__title {
@@ -49,57 +52,199 @@
   text-align: left;
 }
 
-  /* Pricing Schedule */
-  .pricing__schedule {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    margin-top: 20px;
-  }
-  
-  .pricing__schedule-items {
-    margin-bottom: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+/* Pricing Schedule */
+.pricing__schedule {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
 
-  .pricing__day {
-    color: var(--subtext-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-bottom: 5px;
-    line-height: 30px;
-  }
-  
-  .pricing__time {
-    color: var(--time-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
-  }
-  
-  /* Pricing Carousel Plan */
-  .pricing__carousel-plan {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-  }
-  
-  .pricing__button-left,
-  .pricing__button-right {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .pricing__button-left {
-    left: 10px;
-  }
-  
-  .pricing__button-right {
-    right: 10px;
-  }
+.pricing__schedule-items {
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.pricing__day {
+  color: var(--subtext-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+  line-height: 30px;
+}
+
+.pricing__time {
+  color: var(--time-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+}
+
+/* Pricing Carousel Plan */
+.pricing__carousel-plan {
+  position: relative;
+  max-height: 502px;
+  overflow: hidden;
+}
+
+/* Pricing Button left and right*/
+.pricing__button-left,
+.pricing__button-right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  fill: var(--svg-arrow-color);
+  background-color: var(--svg-bg-arrow-mobile-color);
+}
+
+.pricing__button-left {
+  left: 10px;
+}
+
+.pricing__button-right {
+  right: 10px;
+}
+
+/* Carousel Wrapper */
+.pricing__carousel-wrapper {
+  display: flex;
+  justify-content: start;
+  overflow-x: auto;
+  margin-bottom: 20px;
+}
+
+/* Carousel Inner */
+.pricing__carousel-inner {
+  flex: 0 0 100%;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+
+/* Carousel Slide */
+.pricing__carousel-slide {
+  text-align: left;
+  background-color: var(--details-card-bg-color);
+  padding: 31px;
+  line-height: 1.5;
+  font-weight: normal;
+  height: 100%;
+}
+
+.pricing__price {
+  color: var(--price-color);
+  font-size: 2.27rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+}
+
+.pricing__plan-title {
+  color: var(--plan-title-color);
+  font-family: "Signika", sans-serif;
+  font-size: 1.6rem;
+  margin-top: 25px;
+  font-weight: 500;
+}
+
+ul.pricing__features {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 20px;
+}
+
+ul.pricing__features li {
+  padding-left: 36px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+ul.pricing__features li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 20px;
+  height: 20px;
+  transform: translateY(-50%);
+}
+
+ul li {
+  color: var(--price-features-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.pricing__features-checkmark::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
+    cover;
+  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-color: var(--checkmark-color);
+}
+
+.pricing__features-crossmark::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E")
+    cover;
+  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E");
+  background-color: var(--crossmark-color);
+}
+
+/* Pricing Select Button */
+.pricing__select-button {
+  margin-top: 20px;
+  display: inline-block;
+  background-color: var(--bn-select-color);
+  border: 1px solid var(--bn-select-color);
+  border-radius: 5px;
+  cursor: pointer;
+  width: 9.35rem;
+  height: 2.8rem;
+  box-shadow: -3px -3px #dfdfdf, 0.5em 0.4em #dfdfdf;
+}
+
+.pricing__select-plan {
+  font-size: 0.72rem;
+  font-family: "Poppins", sans-serif;
+  color: var(--button-text-color);
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 15px;
+  margin: 10px;
+}
+
+.pricing__select-bn-content {
+  padding-right: 20px;
+}
+
+/* Pricing Indicators */
+.pricing__indicators {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.pricing__indicator {
+  display: none;
+}
+
+/* Indicator Label Styles */
+.pricing__indicator + label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ddd;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+/* Checked Indicator Styles */
+.pricing__indicator:checked + label {
+  background-color: #333;
+}
