--- a/css/pricing.css
+++ b/css/pricing.css
@@ -15,6 +15,25 @@
   padding: 0 15px 0;
 }
 
+@media (min-width: 768px) {
+  .pricing__content {
+    max-width: 991px;
+  }
+}
+
+@media (min-width: 992px) {
+  .pricing__content {
+    max-width: 100%;
+    flex-direction: row;
+    max-height: 100%;
+    gap: 20px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 /* Pricing Info */
 .pricing__info {
   text-align: left;
@@ -67,6 +86,14 @@ p.pricing__description {
   align-items: flex-start;
 }
 
+@media (min-width: 768px) {
+  .pricing__schedule-items {
+    flex-direction: row;
+    align-items: baseline;
+    margin-bottom: 0;
+  }
+}
+
 .pricing__day {
   color: var(--subtext-color);
   font-family: "Poppins", sans-serif;
@@ -81,6 +108,16 @@ p.pricing__description {
   font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
   font-weight: normal;
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .pricing__day {
+    padding: 8px 15px 8px 0;
+  }
+  .pricing__time {
+    padding: 8px 0 8px 15px;
+  }
 }
 
 /* Pricing Carousel Plan */
@@ -142,6 +179,12 @@ p.pricing__description {
   flex: 1 0 100%;
   box-sizing: border-box;
   padding: 0 10px;
+}
+
+@media (min-width: 768px) {
+  .pricing__carousel-inner {
+    flex: 1 0 50%;
+  }
 }
 
 /* Carousel Slide */
@@ -279,4 +322,11 @@ a.pricing__select-plan:hover {
 /* Checked Indicator Styles */
 .pricing__indicator:checked + label {
   background-color: var(---pricing-label-checked-color);
+}
+
+@media (min-width: 992px) {
+  .pricing__indicators {
+    flex-basis: 100%;
+    margin-top: 10px;
+  }
 }
