--- a/css/common.css
+++ b/css/common.css
@@ -24,8 +24,8 @@
     --svg-arrow-color: #fff;
     --svg-bn-hover: #235565;
     --pricing-label-color: #ddd;
-    --pricing--label-checked-color: #333;
-    --details-card-bg-color: #f8fafb;
+    --pricing-label-checked-color: #6f6f72;;
+    --pricing-slide-bg-color: #4c98bf12;;
     --footer-bg: #f8fafb;
     --footer-links: rgba(35, 85, 101, 0.46);
     --contacts-links: rgba(35, 85, 101);
