--- a/css/common.css
+++ b/css/common.css
@@ -45,6 +45,10 @@ body {
     display: grid;
     justify-content: center;
     font-family: "Poppins", sans-serif!important;
+    background-image: url("https://res2.weblium.site/res/5f66341807730000225f82ac/5f69efd3c0c73d0021df2614");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 main {
     position: relative;
@@ -62,10 +66,4 @@ img {
 
 .highlight {
     color: red!important;
-}
-
-.wrapper {
-    background-image: url("https://res2.weblium.site/res/5f66341807730000225f82ac/5f69efd3c0c73d0021df2614");
-    background-size: cover;
-    background-position: center;
 }
