--- a/css/banner.css
+++ b/css/banner.css
@@ -57,7 +57,7 @@
 }
 .button__banner--tel:hover {
   background: #235565 ;
-  color:white;
+  color:white!important;
   text-decoration: none;
 }
 
@@ -104,7 +104,4 @@
         color: white;
     }
 
-    .button__banner--tel {
-        color: white;
-    }
 }
