--- a/css/car.with.animal.css
+++ b/css/car.with.animal.css
@@ -1,36 +1,12 @@
-.carousel {
-    position: relative;
-    width: 100%;
-  }
-  
-  .carousel-container {
-    display: flex;
-    max-width: 1200px;
-  }
-  
-  .carousel-container img {
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
+.animal-carousel__img {
+  width: 170px!important;
+  height: 170px!important;
+}
+
+.animal-carousel__round {
+  border-radius: 75px;
+}
+
+.animal-carousel__indicator {
+  color: black;
+}
