--- a/css/care.css
+++ b/css/care.css
@@ -4,7 +4,8 @@
 
     line-height: 1.8;
     background-size: cover;
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     font-family: Arial, Helvetica, sans-serif;
     filter: saturate(130%);
 
