--- a/css/partners-carousel.css
+++ b/css/partners-carousel.css
@@ -1,117 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap");
 .partners * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .partners {
-    padding-top: 50px;
-    padding-bottom: 60px;
-    max-width: 1200px;
+  padding-top: 50px;
+  padding-bottom: 60px;
+  max-width: 1200px;
 }
 
 .partners__title {
-    padding-left: 15px;
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .partners__title-main {
-    color: rgb(81, 154, 201);
-    font-family: Poppins, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    text-align: center;
-    letter-spacing: 0.36px;
-    line-height: 25.6px;
+  color: rgb(81, 154, 201);
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: 0.36px;
+  line-height: 25.6px;
 }
 
 .partners__title-description {
-    color:rgb(36, 45, 49);
-    font-family: Signika, sans-serif;
-    font-size: 41px;
-    font-weight: 600;
-    line-height: 49.2px;
-    letter-spacing: normal;
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 15px;
+  color: rgb(36, 45, 49);
+  font-family: Signika, sans-serif;
+  font-size: 41px;
+  font-weight: 600;
+  line-height: 49.2px;
+  letter-spacing: normal;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 15px;
 }
 
 .partners__carousel {
-    display: flex;
-    justify-content: center;
-    min-height: 200px;
-    padding-left: 124px;
-    padding-right: 124px;
-    max-width: 1200px;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  min-height: 200px;
+  padding-left: 124px;
+  padding-right: 124px;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .partners__carousel-slide {
-    height: auto;
-    width: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    object-fit: cover;
+  height: auto;
+  width: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .partners__carousel-slide img {
-    max-width: 263px;
-    max-height: 164px;
+  max-width: 263px;
+  max-height: 164px;
+}
+
+.partners__carousel-slide:nth-child(5) {
+  display: none;
 }
 
 .partners__carousel-slides {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0;
-    width: 90%;
-    margin: auto;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+  width: 90%;
+  margin: auto;
+  text-align: center;
 }
 
 .partners__carousel-btn-next,
 .partners__carousel-btn-prev {
-    background-color: transparent;
-    border-radius: 50%;
-    cursor: pointer;
-    border: none;
-    transition: 0.4s ease-in;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 40px;
+  background-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+  border: transparent;
+  transition: 0.4s ease-in;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 40px;
 }
 
-.partners__carousel-btn-prev{
-    transform: rotate(180deg);
+.partners__carousel-btn-prev {
+  transform: rotate(180deg);
 }
 
 @media (min-width: 770px) {
-    .partners__carousel-slide {
-        width: 80%;
-    }
-
+  .partners__carousel-slide {
+    width: 80%;
+  }
 }
 
 @media (min-width: 468px) {
-    .partners__carousel-slide {
-        width: 100%;
-    }
+  .partners__carousel-slide {
+    width: 100%;
+  }
 }
 
 @media (max-width: 800px) {
+  .partners__carousel-slides {
+    max-width: 300px;
+    margin: 0;
+  }
+  .partners__carousel-slide img {
+    max-width: 263px;
+    max-height: 164px;
+  }
+}
 
-    .partners__carousel-slides{
-        max-width: 300px;
-        margin: 0;
-    }
-    .partners__carousel-slide img {
-        max-width: 263px;
-        max-height: 164px;
-    }
+.modal {
+  display: none;
+  position: absolute;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  position: absolute;
+  max-width: 25%;
+  left: 38%;
+  top: 30%;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
 }
